export const snapshot = {};

snapshot[`isParametersOf<T> > returns properly named predicate function 1`] = `
"isParametersOf([
  isNumber,
  isString,
  asOptional(isBoolean)
])"
`;

snapshot[`isParametersOf<T> > returns properly named predicate function 2`] = `"isParametersOf([(anonymous)])"`;

snapshot[`isParametersOf<T> > returns properly named predicate function 3`] = `"isParametersOf([])"`;

snapshot[`isParametersOf<T> > returns properly named predicate function 4`] = `
"isParametersOf([
  isParametersOf([
    isParametersOf([
      isNumber,
      isString,
      asOptional(isBoolean)
    ])
  ])
])"
`;

snapshot[`isParametersOf<T, R> > returns properly named predicate function 1`] = `
"isParametersOf([
  isNumber,
  isString,
  asOptional(isBoolean)
], isArray)"
`;

snapshot[`isParametersOf<T, R> > returns properly named predicate function 2`] = `"isParametersOf([(anonymous)], isArrayOf(isString))"`;

snapshot[`isParametersOf<T, R> > returns properly named predicate function 3`] = `"isParametersOf([], isArrayOf(isString))"`;

snapshot[`isParametersOf<T, R> > returns properly named predicate function 4`] = `
"isParametersOf([
  isParametersOf([
    isParametersOf([
      isNumber,
      isString,
      asOptional(isBoolean)
    ], isArray)
  ], isArray)
])"
`;
